--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </span>
                     
                  </div>
-                <div style="margin-top: 20px;">
+                <div class="media" style="margin-top: 20px;">
                     <img class="img" src="./images/main-camera.png" alt="">
                 </div>
                
